# monorepo-spikes

./: Makefile  README.md
common/python/hello_world_projen_official/: Makefile
common/python/hello_world_projen_official/.projen/: deps.json
common/python/hello_world_reference/: Makefile
hello_worlder/: .coveragerc  .gitignore  Makefile  README.md  constraints.txt  pyproject.toml  ruff.toml
hello_worlder/src/hello_worlder/: hello_world.py  main.py  test.ipynb
hello_worlder/tests/hello_worlder/: test_hello_world.py
services/hello_world/: constraints.txt
services/hello_world/tests/: __init__.py
services/hello_world/tests/hello_worlder/: test_hello_world.py
shared/libs/hello_world/src/hello_world/: main.py  test.ipynb
shared/python/hello_world/: Makefile  README.md  pyproject.toml
shared/python/hello_world_projen_official/: .gitattributes  .gitignore  .projenrc.py  README.md
shared/python/hello_world_projen_official/tests/: test_example.py
shared/python/hello_world_reference/: README.md  pyproject.toml
shared/python/projen_world/: .projenrc.py  Makefile  README.md  requirements-dev.txt  requirements.txt
